- Fix for bug #8535 - floating point exception on FreeBSD while initializing   crypt random numbers